# MADR_api

./: .coverage  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py
app/api/endpoints/: accounts.py
app/models/: models.py
app/schemas/: account_schema.py  author_schema.py  book_schema.py
migrations/: env.py
migrations/versions/: c917b437c5dc_create_accounts_table.py
tests/: conftest.py  test_account.py  test_db.py
