[tool.ruff]
line-length = 79  
extend-exclude = ['migrations']  

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'


[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s --cov=fast_zero -vv'
post_test = 'coverage html && start htmlcov/index.html'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.poetry.dependencies]
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"